2008-07-09  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_button_new_product_clicked): Move
	clean_container() at the begging so we clean and then set the text.
	(on_btn_get_request_clicked): Added function.

	* postgres-functions.c (IngresarProducto): Fix possible bug that
	can produce a bad calculation when try to get how many products
	where interchanged.

2008-07-08  Jonathan Gonzalez V.  <zeus@gnu.org>

	* administracion_productos.c (CloseProductDescription): Deleted function.
	(ModificarProducto): Added paramater widget_barcode to get the barcode
	from that widget.

	* compras.c (AddProveedor): To check if a provider exists we just
	use "rut" without the verify digit.

2008-07-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* caja.c (caja_get_last_amount): Make sure that we have something
	to get from the last SQL excecuted.

	* rizoma-config.c (on_page_change): Deleted the code that set to
	TRUE the complete state of page four.

2008-07-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (on_btn_conneciton_test_clicked): Created to
	test connection.

2008-07-04  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (on_btn_credit_sale_clicked): Replaced g_strsplit() for
	parse_rut, this should prevent an error of parse when a user
	decide to introduce a rut with or without dots and strips.

	* utils.c (parse_rut): Added function.

	* ventas.c (on_sell_button_clicked): Added 'CHASH' to sell type
	when sell directly.
	Indented some lines, deleted tabs.

2008-07-02  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c: Replaced informacion_producto() for
	informacion_producto_venta().

2008-06-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (on_radio_btn_type_network_toggled): Added
	function to handle the toggle on network button.
	(on_page_change): Prefer the use of if-elseif instead of many if.
	(on_page_change): Added code to deal with page two.

2008-06-25  Jonathan Gonzalez V.  <zeus@gnu.org>
